fixed: background texture not covering x-mark, added semantics to x-mark (changed from div to figure with sr-only figcaption

--- a/public/styles.css
+++ b/public/styles.css
@@ -543,6 +543,7 @@ main {
 
 .mark {
     background-size: cover;
+    padding: 10px;
 }
 
 #checkmark {
@@ -735,7 +736,7 @@ li:hover::before {
     }
 }
 
-@media (max-width: 761px) and (min-height: 761px) {
+@media (max-width: 761px) and (min-height: 660px) {
 
     main {
         grid-template-areas:
